# Clarvis

./: .env.example  .gitignore  CLAUDE.md  ClaudeStatusOverlay  ClaudeStatusOverlay.swift  DESIGN_NOTES.md  Display.swift  INSIGHTS.md  LICENSE  README.md  clarvis.sh  config.example.json  config.json  control-panel.html  control-server.py  debug_wake_word.py  debug_wake_word_simple.py  memu.db  pyproject.toml  restart.sh  run_widget.py  setup.sh  start-control-panel.sh  sync-to-mcp.sh
.github/workflows/: test.yml
ClarvisWidget/: ClarvisWidget  clarvis_widget  main.swift  test_asr  test_asr.swift
central_hub/: daemon.py  debug_ui.py  server.py
central_hub/core/: __init__.py  cache.py  colors.py  ipc.py  state.py
central_hub/services/: __init__.py  location.py  sonos.py  thinking_feed.py  token_usage.py
central_hub/widget/: __init__.py  canvas.py  config.py  display_service.py  pipeline.py  pixel_avatar.py  renderer.py  socket_server.py
chat-tui/: package-lock.json  package.json
chat-tui/src/: app.ts  commands.ts  context.ts  daemon-client.ts  event-handler.ts  main.ts  theme.ts
chat-tui/src/components/: dialogs.ts  loading.ts  output-log.ts  prompt-input.ts
clarvis/: __init__.py  daemon.py  memory_tools.py  music_tools.py  server.py  spotify_tools.py  timer_tools.py
clarvis/agent/: __init__.py  agent.py  context.py  factory.py
clarvis/archetypes/: __init__.py  base.py  face.py  progress.py  weather.py
clarvis/channels/: __init__.py  agent_factory.py  base.py  bus.py  context.py  events.py  manager.py  memory_context.py  registry.py  state.py
clarvis/chat/: bridge.py
clarvis/cli/: ctools.py
clarvis/core/: __init__.py  audio.py  cache.py  colors.py  command_handlers.py  context.py  context_helpers.py  credentials.py  display_manager.py  env.py  hook_processor.py  ipc.py  log.py  paths.py  persistence.py  refresh_manager.py  scheduler.py  session_tracker.py  signals.py  socket_base.py  state.py  time_service.py  time_utils.py  tool_classifier.py  wakeup.py
clarvis/display/: __init__.py  click_regions.py  colors.py  config.py  display_manager.py  pipeline.py  refresh_manager.py  renderer.py
clarvis/elements/: __init__.py  registry.py
clarvis/formatters/: __init__.py  knowledge.py  memory.py  spotify.py
clarvis/hooks/: __init__.py  hook_processor.py  tool_classifier.py
clarvis/mcp/: __init__.py  _helpers.py  channel_tools.py  knowledge_tools.py  memory_tools.py  server.py  spotify_tools.py
clarvis/memory/: document_watcher.py  entity_types.py  goals.py  ground.py  session_reader.py  store.py
clarvis/pi-bridge/: package-lock.json
clarvis/services/: __init__.py  cognee_memory.py  consolidation.py  context_accumulator.py  location.py  memory_maintenance.py  mlx_voice_agent.py  session_tracker.py  spotify_session.py  tavily_client.py  thinking_feed.py  timer_notifier.py  timer_service.py  token_usage.py  voice_agent.py  voice_orchestrator.py  wake_word.py  wakeup.py  weather.py  whimsy_verb.py
clarvis/widget/: __init__.py  avatar.py  canvas.py  click_regions.py  config.py  display_service.py  pipeline.py  renderer.py  socket_server.py
data/commands/: remember.md
data/resources/: tmp0wl_addy.txt  tmp3i9_yk1m.txt  tmpbqomjw1j.txt  tmpbzgx3396.txt  tmpcmi1j96y.txt  tmpdvruxllv.txt  tmplxp01f56.txt  tmpqz8smck7.txt  tmpt0wv_oh2.txt  tmpwle8n0j1.txt
data/skills/: checkin.md  ingest.md  reflect.md  retain.md
docs/: test-results-2026-01-22.md
docs/plans/: 2026-01-21-smart-status-implementation.md  2026-01-21-smart-status-system-design.md  2026-01-22-central-hub-consolidation.md  2026-01-22-central-mcp-daemon.md  2026-01-22-composable-sprite-system.md  2026-01-22-data-pixels-visualizer-design.md  2026-01-22-modular-display-system-design.md  2026-01-22-thinking-feed-adaptation.md  2026-01-23-testing-ci-design.md  2026-02-27-canvas-sprite-system-design.md  2026-03-05-archetype-migration.md
mcp-server/: .gitignore  README.md  pyproject.toml  server.py  thinking_feed.py
models/: clarvis_final.onnx  clarvis_int8.onnx  mel-spectrogram_int8.onnx  merged_pipeline.onnx  speech-embedding_int8.onnx
renderer/: animator.js  examples.txt  index.html  package-lock.json  package.json  sprites.js
scripts/: com.centralhub.daemon.plist  com.clarvis.widget.plist  migrate_cognee.py  setup.sh  uninstall_daemon.sh
scripts/migration_staging/: md_files_manifest.md  shepard.jsonl  shepard_preview.md  world.jsonl  world_preview.md
src/central_hub/: __init__.py  server.py
tests/: bench_performance.py  conftest.py
tests/properties/: test_properties.py
tests/unit/: test_agent.py  test_agent_factory.py  test_avatar.py  test_backend_protocol.py  test_cache.py  test_canvas.py  test_click_regions.py  test_cognee_backend.py  test_colors.py  test_commands.py  test_config.py  test_consolidation.py  test_core.py  test_ctools_cli.py  test_ctools_commands.py  test_cv_builder.py  test_cv_parser.py  test_cv_registry.py  test_cv_runtime.py  test_cv_specs.py  test_daemon.py  test_document_watcher.py  test_entity_types.py  test_goals.py  test_graphiti_step.py  test_ground.py  test_hindsight_backend.py  test_hook_processor.py  test_ipc.py  test_location.py  test_mcp.py  test_mcp_memory.py  test_memory.py  test_memory_context.py  test_memory_graphiti.py  test_memory_ingestion.py  test_memory_memu.py  test_memory_recall_tool.py  test_memory_service.py  test_pi_backend.py  (+26 more)
widget/: ClaudeStatusOverlay.swift  restart.sh
(+214 files in other folders)
