[project]
name = "clarvis"
version = "0.1.0"
description = "Clarvis MCP server for widget data (weather, status, thinking feed, music control)"
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "fastmcp>=2.14,<3",
    "httpx",
    "filelock",
    "cachetools",
    "pytimeparse2",
    "numpy",
    "orjson",
]

[tool.uv]

[tool.uv.sources]
clautify = { path = "../clautify", editable = true }
nanobuddy = { path = "../nanobuddy", editable = true }

[project.scripts]
clarvis = "clarvis.daemon:main"

[project.optional-dependencies]
voice = ["claude-agent-sdk", "nanobuddy[detect]"]
memory = ["graphiti-core[anthropic]>=0.28", "falkordblite>=0.8.0", "redis>=7.2", "memu-py>=1.4"]
music = ["clautify"]
channels = ["httpx", "websockets"]
particles = ["numba>=0.63.1"]
all = ["clarvis[voice,memory,music,particles]"]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "hypothesis",
]
dev = [
    "clarvis[all,test]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clarvis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["."]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["clarvis"]
omit = ["*/__pycache__/*", "*/tests/*"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
