[project]
name = "clarvis"
version = "0.1.0"
description = "Clarvis — macOS desktop companion with animated ASCII avatar"
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "httpx",
    "filelock",
    "cachetools",
    "pytimeparse2",
    "numpy",
    "orjson",
    "lark",
]

[tool.uv]

[tool.uv.sources]
clautify = { path = "../clautify", editable = true }
nanobuddy = { path = "../nanobuddy", editable = true }

[project.scripts]
clarvis = "clarvis.daemon:main"

[project.optional-dependencies]
voice = ["claude-agent-sdk", "nanobuddy[detect]"]
memory = [
    "cognee[graphiti,anthropic]",
    "falkordblite>=0.8.0",
    "redis>=7.2",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.17",
    "pgvector>=0.3",
    "psycopg2-binary>=2.9",
    "greenlet>=3.2",
    "pg0-embedded>=0.11.0",
    "tiktoken>=0.12.0",
    "langchain-text-splitters>=0.3.0",
    "dateparser>=1.2",
    "python-dateutil>=2.8",
]
music = ["clautify"]
channels = ["httpx", "websockets"]
particles = ["numba>=0.63.1"]
all = ["clarvis[voice,memory,music,particles]"]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "hypothesis",
]
dev = [
    "clarvis[all,test]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clarvis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["."]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["clarvis"]
omit = ["*/__pycache__/*", "*/tests/*"]

[tool.ruff]
target-version = "py313"
line-length = 120
extend-exclude = ["clarvis/vendor/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
