[project]
name = "central-hub"
version = "0.1.0"
description = "Central MCP server for widget data (weather, status, thinking feed)"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.28.0",
    "watchdog>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/central-hub"
Repository = "https://github.com/yourusername/central-hub"

[project.scripts]
central-hub = "server:main"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server", "thinking_feed", "usage_monitor"]
